# microservice-with-rust

./: .env  .gitignore  Cargo.toml  README.md  build.rs  microservice.toml  ring.proto  server.rs  table.json  test.db  users.csv
migrations/2020-12-28-060042_test/: up.sql
migrations/2020-12-28-190316_create_users/: up.sql
migrations/2020-12-28-190319_create_channels/: down.sql  up.sql
migrations/2020-12-28-190321_create_memberships/: up.sql
migrations/2020-12-28-190324_create_messages/: up.sql
migrations/comment-server/2020-12-30-230358_create_comment/: up.sql
src/: client.rs  color.rs  lib.rs  main.rs  model.rs  models.rs  ring.rs  ring_grpc.rs  schema.rs  worker.rs
src/auth-server/: main.rs  model.rs
src/comment-server/: main.rs  model.rs
src/email-server/: main.rs
