[package]
name = "microservice-with-rust"
version = "0.1.0"
authors = ["Henry Hao <haoyixian1994@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["r2d2", "sqlite"] }
env_logger = "0.8.2"
failure = "0.1.8"
lettre = "0.9.5"
lettre_email = "0.9.4"
log = "0.4.11"
nickel = "0.11.0"
rouille = "3.0.0"
serde = { version = "1.0.118", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[[bin]]
name = "auth-server"
path = "src/auth-server/main.rs"
test = false

[[bin]]
name = "email-server"
path = "src/email-server/main.rs"
test = false
