[package]
name = "microservice-with-rust"
version = "0.1.0"
authors = ["Henry Hao <haoyixian1994@hotmail.com>"]
edition = "2018"
description = "This is repo is used to track my learning with 'Hands-on Microservice with Rust'"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.2", features = ["full", "runtime"] }
rand = "0.8"
futures = "0.3.8"
tokio = {version = "1.0", features=["full"] }
lazy_static = "1.4"
regex = "1.4.2"
hyper-staticfile = "0.5.3"
image = "0.23.12"
queryst = "2.1.0"
serde_json = "1.0.61"
